# experiment_trm

./: model.py  pyproject.toml  run_local.sh  run_slurm.sbatch  trainer.py
